...
  return (
    <Screen
      preset="auto"
      contentContainerStyle={themed($screenContentContainer)}
      safeAreaEdges={["top", "bottom"]}
    >
      <Header title="" leftIcon="back" onLeftPress={() => navigation.goBack()} safeAreaEdges={[]} />

      <Icon icon="check" size={64} color={colors.tint} containerStyle={themed($iconContainer)} />

      <Text text="Check Your Email" preset="heading" style={themed($heading)} />

      <Text
...
